fixed css behaviour of footer links
before, the links were slightly off-centered, and their clickable area was extended to the entire div (it-brand-wrapper) in which they were contained

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -22,3 +22,17 @@
 :host ::ng-deep .it-footer-main .it-brand-wrapper {
   padding: 0;
 }
+
+a {
+  color: white;
+}
+
+.footerlink {
+  text-align: center;
+}
+
+@media screen and (max-width: 576px) {
+  .footerlink {
+    text-align: initial;
+  }
+}
